Line 505 getLast() (JDK 21) -> get(mycologist.getMyceliums().size()-1) (JDK 11)